--- a/projects/calendar/src/components/sidebar/MobileSidebarWrapper.scss
+++ b/projects/calendar/src/components/sidebar/MobileSidebarWrapper.scss
@@ -6,14 +6,14 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0);
+  background: var(--tailwind-colors-zinc-100, #F4F4F5);
   visibility: hidden;
   transition: background-color 0.3s ease, visibility 0.3s ease;
   z-index: 999;
   
   &--open {
     visibility: visible;
-    background-color: rgba(0, 0, 0, 0.5);
+    background: var(--tailwind-colors-zinc-100, #F4F4F5);
   }
 }
 
